--- a/elliott.html
+++ b/elliott.html
@@ -14,8 +14,8 @@
   <nav>
     <ul>
       <li> <a href="elliott.html">Elliott</a></li>
-      <li> <a href="Tiny.html">Tiny</a></li>
-      <li> <a href="Toby.html">Toby</a></li>
+      <li> <a href="tiny.html">Tiny</a></li>
+      <li> <a href="toby.html">Toby</a></li>
       <li> <a href="roxy.html">Roxy and Charlie</a> </li>
       <li> <a href="index.html">Home</a></li>
     </ul>
