--- a/tiny.html
+++ b/tiny.html
@@ -20,9 +20,9 @@
 
     <nav>
       <ul>
-        <li><a href="Elliott.html">Elliot</a></li>
+        <li><a href="elliott.html">Elliot</a></li>
         <img src="elliott.jpg">
-        <li><a href="Tiny.html">Beethoven and Tiny</a></li>
+        <li><a href="tiny.html">Beethoven and Tiny</a></li>
         <img id='pic2' src="tiny.jpg">
         <li> <a href="toby.html">Toby</a> </li>
         <img src="toby.jpg">
